# linky-note

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
examples/adr/: 0000-use-markdown-architectural-decision-records.md  0001-use-CC0-as-license.md  0002-do-not-use-numbers-in-headings.md  0003-include-in-adr-tools.md  0004-write-own-toc-tool.md  0005-use-dashes-in-filenames.md  0006-use-names-as-identifier.md  0007-do-not-emphasize-line-headings.md  0008-add-status-field.md  0009-support-links-between-adrs-inside-an-adrs.md  0010-support-categories.md  0011-use-asterisk-as-list-marker.md  accepted.md  adr.md  categorie.md  deprecated.md  format.md  headings.md  john.md  names.md  person.md  proposed.md  rejected.md  richard.md  sophia.md  status.md  tools.md
linky_note/: __init__.py
linky_note/adapters/markdown/: factories.py  marko_extractor.py  marko_modifier.py  marko_parser.py
linky_note/adapters/markdown/marko_ext/: elements.py  marko_builder.py
linky_note/adapters/references_db/: factories.py  query_builders.py  tables.py
linky_note/common/: exceptions.py
linky_note/dto/: dto.py
linky_note/entrypoints/: append_linked_references.py  commands.py
linky_note/infrastructure/: cli_app.py  db_connection.py  markdown.py
linky_note/interfaces/: modifier.py  parser.py  reference_extractor.py  references_db.py
linky_note/usecases/: config.py  modify.py  parse.py  read_references.py  write.py
marko_backlinks/: __init__.py  __main__.py
marko_backlinks/adapters/converter/: marko_converter.py
marko_backlinks/adapters/markdown/: factories.py  marko_extractor.py  marko_markdown.py  marko_modifier.py  marko_parser.py
marko_backlinks/adapters/markdown/marko_ext/: elements.py  marko_builder.py
marko_backlinks/adapters/references_db/: factories.py  query_builders.py
marko_backlinks/common/: exceptions.py
marko_backlinks/dto/: dto.py
marko_backlinks/entrypoints/: append_linked_references.py  apply_backlinks.py
marko_backlinks/infrastructure/: db_connection.py
marko_backlinks/interfaces/: converter.py  modifier.py  parser.py  reference_extractor.py  references_db.py  renderer.py
marko_backlinks/usecases/: config.py  extension.py  modify.py  parse.py  read_references.py  write.py
marko_backlinks/usecases/marko_ext/: elements.py  exceptions.py  parser.py  renderer.py
tests/e2e/: common.py  conftest.py
tests/e2e/frontmatter/: test_frontmatter.py
tests/e2e/frontmatter/data/: 0000-use-markdown-architectural-decision-records.md  0001-use-CC0-as-license.md  0002-do-not-use-numbers-in-headings.md  accepted.md  adr.md  categorie.md  format.md  headings.md  john.md  legal.md  person.md  proposed.md  richard.md  sophia.md  status.md
tests/e2e/link/: test_link.py
tests/e2e/link/data/: 0000-use-markdown-architectural-decision-records.md  0001-use-CC0-as-license.md  0002-do-not-use-numbers-in-headings.md  accepted.md  adr.md  categorie.md  format.md  headings.md  john.md  legal.md  person.md  proposed.md  richard.md  sophia.md  status.md
tests/e2e/link_subfolders/: test_link_subfolders.py
tests/e2e/link_subfolders/data/: sophia.md  status.md
tests/e2e/link_subfolders/data/adr/: 0000-use-markdown-architectural-decision-records.md  0001-use-CC0-as-license.md  0002-do-not-use-numbers-in-headings.md  adr.md
tests/e2e/link_subfolders/data/categorie/: categorie.md  format.md  headings.md  legal.md
tests/e2e/link_subfolders/data/person/: john.md  person.md  richard.md  sophia.md
tests/e2e/link_subfolders/data/status/: accepted.md  proposed.md  status.md
tests/e2e/wikilink/: test_wikilink.py
tests/e2e/wikilink/data/: 0001-use-CC0-as-license.md  0002-do-not-use-numbers-in-headings.md  accepted.md  adr.md  categorie.md  headings.md  john.md  legal.md  person.md  richard.md  sophia.md  status.md
tests/e2e/wikilink_subfolders/: test_wikilink_subfolders.py
tests/e2e/wikilink_subfolders/data/adr/: 0000-use-markdown-architectural-decision-records.md  0001-use-CC0-as-license.md  0002-do-not-use-numbers-in-headings.md  adr.md
tests/e2e/wikilink_subfolders/data/categorie/: format.md  headings.md  legal.md
tests/e2e/wikilink_subfolders/data/person/: john.md  person.md  richard.md  sophia.md
tests/e2e/wikilink_subfolders/data/status/: proposed.md  status.md
tests/unit_tests/adapters/mardown/: conftest.py  test_marko_extractor.py  test_marko_markdown.py  test_marko_modifier.py  test_marko_parser.py
tests/unit_tests/adapters/references_db/: conftest.py  test_query_builders.py
tests/unit_tests/usecases/: conftest.py  test_parse.py
