# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "linky-note"
version = "0.4.4"
description = "Awesome `linky-note` is a Python cli/package created with https://github.com/TezRomacH/python-package-template"
readme = "README.md"
authors = [
  "jb-delafosse <jean-baptiste@lumapps.com>"
]
license = "MIT"
repository = "https://github.com/jb-delafosse/linky-note"
homepage = "https://github.com/jb-delafosse/linky-note"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["markdown", "pre-commit", "backlink", "roamresearch"]  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: Markdown"
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"linky-note" = "linky_note.entrypoints.append_linked_references:app"

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = ">=1.6,<5.0", python = "<3.8"}
typer = {extras = ["all"], version = "^0.6.1"}
rich = ">=8,<11"
marko = ">=0.10,<1.1"
sqlalchemy = "^1.3.20"
PyYAML = "^5.4.1"
click = "<8.1.0"

[tool.poetry.dev-dependencies]
darglint = "^1.8.1"
isort = "^5.10.1"
pyupgrade = "^2.29.1"
black = {version = "^21.10b0", allow-prereleases = true}
mypy = "^0.990"
bandit = "^1.7.1"
safety = "^2.3.3"
pytest = "^7.2.0"
pylint = "^2.11.1"
pydocstyle = "^6.1.1"
pre-commit = "^2.15.0"
factory_boy = "^3.2.0"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80


[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = ["*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
